<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsideContent">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/menu_20" />

        <LinearLayout
            android:layout_width="122dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/OpenControl_txt1"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_extrabold"
                android:text="@string/OpenControl_txt2"
                android:textColor="@color/black"
                tools:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="12dp"
                android:text="@string/sign_out"
                android:backgroundTint="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:padding="10dp"
                app:srcCompat="@drawable/bell" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/profiile_kkk"
                android:padding="5dp"
                app:srcCompat="@drawable/face_profile" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:orientation="horizontal"
        android:padding="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:background="@color/calendar_separator_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        app:srcCompat="@drawable/zgerb" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/With_support_Moscow"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:fontFamily="@font/pt_serif_regular"
                    android:gravity="left"
                    android:text="@string/One_answer"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    tools:textSize="24sp" />

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:gravity="left"
                    android:text="@string/Control_txt_Buis"
                    android:textColor="@color/black"
                    tools:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="22dp">

                    <LinearLayout
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="80dp"
                        android:layout_marginRight="30dp"
                        android:background="@drawable/red_circle"
                        android:orientation="vertical"
                        tools:layout_marginLeft="55dp">

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="53dp"
                        app:srcCompat="@drawable/chel" />

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="230dp"
                        app:srcCompat="@drawable/circle_info" />

                </FrameLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/pt_serif_regular"
                android:gravity="left"
                android:text="@string/Eazy_answers"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:layout_marginTop="64dp"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="307dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/pt_serif_regular"
                android:gravity="left"
                android:text="@string/Special_answers"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                tools:layout_marginTop="24dp"
                tools:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="40dp"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/circle_plus" />

                <TextView
                    android:id="@+id/textView26"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/pt_serif_regular"
                    android:gravity="left"
                    android:text="@string/Your_answers"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    tools:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/img1" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/pt_serif_regular"
                android:gravity="left"
                android:text="@string/Chek_yor_buisness"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:layout_marginTop="64dp"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="27dp"
                android:layout_marginRight="24dp"
                android:fontFamily="@font/pt_serif_regular"
                android:gravity="left"
                android:text="@string/Knows_control"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                tools:layout_marginTop="24dp"
                tools:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="40dp"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/circle_arrow" />

                <TextView
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/pt_serif_regular"
                    android:gravity="left"
                    android:text="@string/Simulator"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    tools:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                app:srcCompat="@drawable/img_2" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="64dp"
                android:layout_weight="1"
                android:fontFamily="@font/pt_serif_regular"
                android:gravity="left"
                android:text="@string/Profile_main_txt"
                android:textColor="@color/black"
                android:textSize="14sp"
                tools:textSize="24sp" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_weight="1"
                android:fontFamily="@font/pt_serif_regular"
                android:gravity="left"
                android:text="@string/Info_buiseness_txt"
                android:textColor="@color/gray_text"
                android:textSize="14sp"
                tools:layout_marginTop="24dp"
                tools:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="40dp"
                android:gravity="center|left"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/circle_arrow" />

                <TextView
                    android:layout_width="192dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:fontFamily="@font/pt_serif_regular"
                    android:gravity="left"
                    android:text="@string/Fill_your_profile_txt"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    tools:textSize="16sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                app:srcCompat="@drawable/img_3"
                tools:layout_marginBottom="30dp" />

        </LinearLayout>
    </ScrollView>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottm_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/selector"
        app:itemTextColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>